--- a/css/styles.css
+++ b/css/styles.css
@@ -938,11 +938,13 @@ span.sm-dot {
     transition: all 8000ms linear
 }
 
+
 .slider-fade4 .owl-item.active .bg-img {
-    -webkit-transform: scale(1.25);
-    -ms-transform: scale(1.25);
-    transform: scale(1.25)
+    -webkit-transform: scale(1) ;
+    -ms-transform: scale(1) ;
+    transform: scale(1) ;
 }
+
 
 .slider-fade4 .item {
     height: 100vh
@@ -6918,4 +6920,52 @@ footer .phone a:focus {
     background: #1d2a34;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     z-index: 9999
+}
+
+
+
+html[dir="rtl"] .ms-auto{
+    margin-right: auto !important;
+    margin-left: 0 !important;
+}
+
+html[dir="rtl"] .me-4{
+    margin-left: 1.5rem !important;
+}
+
+html[dir="rtl"] .list-style2 li{
+    padding-right: 30px;
+}
+
+html[dir="rtl"] .list-style2 li:after{
+    right: 0;
+}
+
+html[dir="rtl"] .card-style3 .shape-2{
+    right: 40px;
+}
+
+html[dir="rtl"] .page-title-section .shape-2{
+    right: unset;
+    left: 100px;
+}
+
+html[dir="rtl"] .page-title-section .shape-1{
+    right: unset;
+    left: 0px;
+}
+
+html[dir="rtl"] .page-title-section ul li:after{
+    left: -15px;
+    right: unset;
+}
+
+html[dir="rtl"] .page-title-section ul li{
+    margin-left: 20px;
+    margin-right: unset;
+}
+
+html[dir="rtl"] .about-style02 .shape-2{
+    right: -304px;
+    left: unset;
 }
